--- a/index.html
+++ b/index.html
@@ -1,59 +1,381 @@
 <!DOCTYPE html>
-<html>
-<head>
-<title>W3.CSS Template</title>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="stylesheet" href="https://www.w3schools.com/w3css/5/w3.css">
-<style>
-body {font-family: "Times New Roman", Georgia, Serif;}
-h1, h2, h3, h4, h5, h6 {
-  font-family: "Playfair Display";
-  letter-spacing: 5px;
-}
-</style>
-</head>
+<html lang="en">
+
+  <head>
+
+    <meta charset="utf-8">
+    <meta name="author" content="templatemo">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700;900&display=swap" rel="stylesheet">
+
+    <title>FantaCalcio - Home</title>
+
+    <!-- Bootstrap core CSS -->
+    <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+
+
+    <!-- Additional CSS Files -->
+    <link rel="stylesheet" href="assets/css/fontawesome.css">
+    <link rel="stylesheet" href="assets/css/templatemo-liberty-market.css">
+    <link rel="stylesheet" href="assets/css/owl.css">
+    <link rel="stylesheet" href="assets/css/animate.css">
+    <link rel="stylesheet"href="https://unpkg.com/swiper@7/swiper-bundle.min.css"/>
+
+  </head>
+
 <body>
 
-<!-- Navbar (sit on top) -->
-<div class="w3-top">
-  <div class="w3-bar w3-white w3-padding w3-card" style="letter-spacing:4px;">
-    <a href="#home" class="w3-bar-item w3-button">A STRONZZZOOOO</a>
-    <!-- Right-sided navbar links. Hide them on small screens -->
-  
-  </div>
-</div>
-
-<!-- Header -->
-<header class="w3-display-container w3-content w3-wide" style="max-width:1600px;min-width:500px" id="home">
-  <img class="w3-image" src="/w3images/hamburger.jpg" alt="Hamburger Catering" width="1600" height="800">
-  <div class="w3-display-bottomleft w3-padding-large w3-opacity">
-    <h1 class="w3-xxlarge">Le Catering</h1>
-  </div>
-</header>
-
-<!-- Page content -->
-<div class="w3-content" style="max-width:1100px">
-
-  <!-- About Section -->
-  <div class="w3-row w3-padding-64" id="about">
-    <div class="w3-col m6 w3-padding-large w3-hide-small">
-     <img src="/w3images/tablesetting2.jpg" class="w3-round w3-image w3-opacity-min" alt="Table Setting" width="600" height="750">
-    </div>
-
-    <div class="w3-col m6 w3-padding-large">
-      <h1 class="w3-center">Riccardo popò</h1><br>
-      <h5 class="w3-center">since 2006</h5>
-      <p class="w3-large">Riccardo nasce come un pirla, continua ad esserlo.</p>
+  <!-- ***** Preloader Start ***** -->
+  <div id="js-preloader" class="js-preloader">
+    <div class="preloader-inner">
+      <span class="dot"></span>
+      <div class="dots">
+        <span></span>
+        <span></span>
+        <span></span>
       </div>
+    </div>
   </div>
+  <!-- ***** Preloader End ***** -->
+
+  <!-- ***** Header Area Start ***** -->
+  <header class="header-area header-sticky">
+    <div class="container">
+        <div class="row">
+            <div class="col-12">
+                <nav class="main-nav">
+                    <!-- ***** Logo Start ***** -->
+                    <a href="index.html" class="logo">
+                        <img src="assets/images/PISTACCHIO__.png" alt="">
+                    </a>
+                    <!-- ***** Logo End ***** -->
+                    <!-- ***** Menu Start ***** -->
+                    <ul class="nav">
+                        <li><a href="index.html" class="active">Home</a></li>
+                        <li><a href="Regolamento.html">Regolamento</a></li>
+                        <li><a href="Albo.html">Albo D'oro</a></li>
+                        <li><a href="Diario.html">Diario</a></li>
+                        <li><a href="Galleria.html">Galleria</a></li>
+                    </ul>   
+                    <a class='menu-trigger'>
+                        <span>Menu</span>
+                    </a>
+                    <!-- ***** Menu End ***** -->
+                </nav>
+            </div>
+        </div>
+    </div>
+  </header>
+  <!-- ***** Header Area End ***** -->
+
+  <!-- ***** Main Banner Area Start ***** -->
+  <div class="main-banner">
+    <div class="container">
+      <div class="row">
+        <div class="col-lg-6 align-self-center">
+          <div class="header-text">
+            <h2>Sogna, Regna &amp; Fatte un panino.</h2>
+            <p>La pistacchiosa è la migliore di tutte. Chiedi ai famosi stremer di Twitch Marco Merrino e Sdrumox cosa pensano a riguardo </p>
+            <div class="buttons">
+              <div class="border-button">
+                <a href="Regolamento.html">Regolamento</a>
+              </div>
+            
+            </div>
+          </div>
+        </div>
+        <div class="col-lg-5 offset-lg-1">
+          <div class="owl-banner owl-carousel">
+            <div class="item">
+              <img src="assets/images/RiccardoBanner1__.jpg" alt="">
+            </div>
+            <div class="item">
+              <img src="assets/images/RiccardoBanner2_.jpg" alt="">
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+  <!-- ***** Main Banner Area End ***** -->
   
-  <hr>
-  
-  
-<!-- End page content -->
-</div>
+ 
 
 
-</body>
+  <div class="currently-market">
+    <div class="container">
+      <div class="row">
+        <div class="col-lg-6">
+          <div class="section-heading">
+            <div class="line-dec"></div>
+            <h2><em>PARTECIPANTI</em> ANNUALI.</h2>
+          </div>
+        </div>
+        <div class="col-lg-6">
+          <div class="filters">
+            <ul>
+              <li data-filter="*"  class="active">Tutti</li>
+              <li data-filter=".msc">2023/2024</li>
+              <li data-filter=".dig">2024/2025</li>
+              <li data-filter=".blc">2025/2026</li>
+              <li data-filter=".vtr">2026/2027</li>
+            </ul>
+          </div>
+        </div>
+        <div class="col-lg-12">
+          <div class="row grid">
+            <div class="col-lg-6 currently-market-item all dig blc">
+              <div class="item">
+                <div class="left-image" style="width:185px; height:310px;">
+                  <img src="assets/images/riccardo.jpeg" alt="" style="border-radius: 20px; min-width: 195px; object-fit:cover; object-position:center; ">
+                </div>
+                <div class="right-content">
+                  <h4>Matitão 19</h4>
+                  <span class="author">
+                    <img src="assets/images/icons8-1°-posto-medaglia-emoji-48.png" alt="" style="max-width: 50px; border-radius: 50%;">
+                    <h6>Riccardo Pedaletti<br><a href="#">ricped006@gmail.com</a></h6>
+                  </span>
+                  <div class="line-dec"></div>
+                  <span class="bid">
+                        <br><strong>SPECIFICHE</strong><br>
+                  </span>
+                  <span class="ends">
+                    <br><strong>1°:&emsp;1</strong><br><strong>2°:&emsp;0</strong><br><strong>3°:&emsp;0</strong>
+                  </span>
+                </div>
+              </div>
+            </div>
+            <div class="col-lg-6 currently-market-item all msc dig blc">
+              <div class="item">
+                <div class="left-image" style="width:185px; height:310px;">
+                  <img src="assets/images/andra nardi.jpeg" alt="" style="border-radius: 20px; min-width: 195px; object-fit:cover; object-position:center; ">
+                </div>
+                <div class="right-content">
+                  <h4>Karim The Dream</h4>
+                  <span class="author">
+                    <img src="assets/images/icons8-1°-posto-medaglia-emoji-48.png" alt="" style="max-width: 50px; border-radius: 50%;">
+                    <h6>Andrea Nardi<br><a href="#">andreanardi@mailLunga.edu.it</a></h6>
+                  </span>
+                  <div class="line-dec"></div>
+                  <span class="bid">
+                        <br><strong>SPECIFICHE</strong><br>
+                  </span>
+                  <span class="ends">
+                    <br><strong>1°:&emsp;1</strong><br><strong>2°:&emsp;0</strong><br><strong>3°:&emsp;0</strong>
+                  </span>
+                </div>
+              </div>
+            </div>
+            <div class="col-lg-6 currently-market-item all msc dig blc">
+              <div class="item">
+                <div class="left-image" style="width:185px; height:310px;">
+                  <img src="assets/images/mrg.jpeg" alt="" style="border-radius: 20px; min-width: 195px; object-fit:cover; object-position:center; ">
+                </div>
+                <div class="right-content">
+                  <h4>MRG</h4>
+                  <span class="author">
+                    <img src="assets/images/icons8-emoji-medaglia-2°-posto-48.png" alt="" style="max-width: 50px; border-radius: 50%;">
+                    <h6>Samuel Scala<br><a href="#">samuelscala2304@gmail.com</a></h6>
+                  </span>
+                  <div class="line-dec"></div>
+                  <span class="bid">
+                        <br><strong>SPECIFICHE</strong><br>
+                  </span>
+                  <span class="ends">
+                    <br><strong>1°:&emsp;0</strong><br><strong>2°:&emsp;1</strong><br><strong>3°:&emsp;0</strong>
+                  </span>
+                </div>
+              </div>
+            </div>
+            <div class="col-lg-6 currently-market-item all msc dig">
+              <div class="item">
+                <div class="left-image" style="width:185px; height:310px;">
+                  <img src="assets/images/nicolo.jpeg" alt="" style="border-radius: 20px; min-width: 195px; object-fit:cover; object-position:center; ">
+                </div>
+                <div class="right-content">
+                  <h4>SCORREGGINA </h4>
+                  <span class="author">
+                    <img src="assets/images/icons8-emoji-medaglia-2°-posto-48.png" alt="" style="max-width: 50px; border-radius: 50%;">
+                    <h6>Nicolò Cascone<br><a href="#">nicolocasconeantonio@gmail.com</a></h6>
+                  </span>
+                  <div class="line-dec"></div>
+                  <span class="bid">
+                        <br><strong>SPECIFICHE</strong><br>
+                  </span>
+                  <span class="ends">
+                    <br><strong>1°:&emsp;0</strong><br><strong>2°:&emsp;1</strong><br><strong>3°:&emsp;0</strong>
+                  </span>
+                </div>
+              </div>
+            </div>
+            <div class="col-lg-6 currently-market-item all msc dig blc">
+              <div class="item">
+                <div class="left-image" style="width:185px; height:310px;">
+                  <img src="assets/images/matteo.jpeg" alt="" style="border-radius: 20px; min-width: 195px; object-fit:cover; object-position:center; ">
+                </div>
+                <div class="right-content">
+                  <h4>ABCDEFGHILMNOPQRSTUVZ</h4>
+                  <span class="author">
+                    <img src="assets/images/icons8-emoji-medaglia-3°-posto-48.png" alt="" style="max-width: 50px; border-radius: 50%;">
+                    <h6>Matteo Nocera<br><a href="#">marconico802@gmail.com</a></h6>
+                  </span>
+                  <div class="line-dec"></div>
+                  <span class="bid">
+                        <br><strong>SPECIFICHE</strong><br>
+                  </span>
+                  <span class="ends">
+                    <br><strong>1°:&emsp;0</strong><br><strong>2°:&emsp;0</strong><br><strong>3°:&emsp;1</strong>
+                  </span>
+                </div>
+              </div>
+            </div>
+            <div class="col-lg-6 currently-market-item all msc dig blc ">
+              <div class="item">
+                <div class="left-image" style="width:185px; height:310px;">
+                  <img src="assets/images/serlemons.jpeg" alt="" style="border-radius: 20px; min-width: 195px; object-fit:cover; object-position:center; ">
+                </div>
+                <div class="right-content">
+                  <h4>Ser Lemones</h4>
+                  <span class="author">
+                    <img src="assets/images/icons8-emoji-medaglia-3°-posto-48.png" alt="" style="max-width: 50px; border-radius: 50%;">
+                    <h6>Riccardo De Luca<br><a href="#">delucariccardo29@gmail.com</a></h6>
+                  </span>
+                  <div class="line-dec"></div>
+                  <span class="bid">
+                        <br><strong>SPECIFICHE</strong><br>
+                  </span>
+                  <span class="ends">
+                    <br><strong>1°:&emsp;0</strong><br><strong>2°:&emsp;0</strong><br><strong>3°:&emsp;1</strong>
+                  </span>
+                </div>
+              </div>
+            </div>
+            <div class="col-lg-6 currently-market-item all msc dig blc ">
+              <div class="item">
+                <div class="left-image" style="width:185px; height:310px;">
+                  <img src="assets/images/i kean.jpeg" alt="" style="border-radius: 20px; min-width: 195px; object-fit:cover; object-position:center; ">
+                </div>
+                <div class="right-content">
+                  <h4>I KEAN MY RIGHTS</h4>
+                  <span class="author">
+                    <img src="" alt="" style="max-width: 50px; border-radius: 50%;">
+                    <h6>Tommaso Iafrate<br><a href="#">tommasoiafrate06@gmail.com</a></h6>
+                  </span>
+                  <div class="line-dec"></div>
+                  <span class="bid">
+                        <br><strong>SPECIFICHE</strong><br>
+                  </span>
+                  <span class="ends">
+                    <br><strong>1°:&emsp;0</strong><br><strong>2°:&emsp;0</strong><br><strong>3°:&emsp;0</strong>
+                  </span>
+                </div>
+              </div>
+            </div>
+            <div class="col-lg-6 currently-market-item all dig blc ">
+              <div class="item">
+                <div class="left-image" style="width:185px; height:310px;">
+                  <img src="assets/images/filippo.jpeg" alt="" style="border-radius: 20px; min-width: 195px; object-fit:cover; object-position:center; ">
+                </div>
+                <div class="right-content">
+                  <h4>Betano</h4>
+                  <span class="author">
+                    <img src="" alt="" style="max-width: 50px; border-radius: 50%;">
+                    <h6>Filippo Iafrate<br><a href="#">filippoiafrate11@gmail.com</a></h6>
+                  </span>
+                  <div class="line-dec"></div>
+                  <span class="bid">
+                        <br><strong>SPECIFICHE</strong><br>
+                  </span>
+                  <span class="ends">
+                    <br><strong>1°:&emsp;0</strong><br><strong>2°:&emsp;0</strong><br><strong>3°:&emsp;0</strong>
+                  </span>
+                </div>
+              </div>
+            </div>
+            <div class="col-lg-6 currently-market-item all msc dig blc ">
+              <div class="item">
+                <div class="left-image" style="width:185px; height:310px;">
+                  <img src="assets/images/birra muretti.jpeg" alt="" style="border-radius: 20px; min-width: 195px; object-fit:cover; object-position:center; ">
+                </div>
+                <div class="right-content">
+                  <h4>BIRRA MURETTI</h4>
+                  <span class="author">
+                    <img src="" alt="" style="max-width: 50px; border-radius: 50%;">
+                    <h6>Federico Venditti<br><a href="#">federicoven.8@gmail.com</a></h6>
+                  </span>
+                  <div class="line-dec"></div>
+                  <span class="bid">
+                        <br><strong>SPECIFICHE</strong><br>
+                  </span>
+                  <span class="ends">
+                    <br><strong>1°:&emsp;0</strong><br><strong>2°:&emsp;0</strong><br><strong>3°:&emsp;0</strong>
+                  </span>
+                </div>
+              </div>
+            </div>
+            <div class="col-lg-6 currently-market-item all msc dig blc ">
+              <div class="item">
+                <div class="left-image" style="width:185px; height:310px;">
+                  <img src="assets/images/francesco mauti.jpeg" alt="" style="border-radius: 20px; min-width: 195px; object-fit:cover; object-position:center; ">
+                </div>
+                <div class="right-content">
+                  <h4>IBIMBIDIKAMENAVOURLA</h4>
+                  <span class="author">
+                    <img src="" alt="" style="max-width: 50px; border-radius: 50%;">
+                    <h6>Francesco Mauti<br><a href="#">francescomauti5@gmail.com</a></h6>
+                  </span>
+                  <div class="line-dec"></div>
+                  <span class="bid">
+                        <br><strong>SPECIFICHE</strong><br>
+                  </span>
+                  <span class="ends">
+                    <br><strong>1°:&emsp;0</strong><br><strong>2°:&emsp;0</strong><br><strong>3°:&emsp;0</strong>
+                  </span>
+                </div>
+              </div>
+            </div>
+            <div class="col-lg-6 currently-market-item all blc ">
+              <div class="item">
+                <div class="left-image" style="width:185px; height:310px;">
+                  <img src="assets/images/maccotta.jpeg" alt="" style="border-radius: 20px; min-width: 195px; object-fit:cover; object-position:center; ">
+                </div>
+                <div class="right-content">
+                  <h4>Sborrhato Pedaletti</h4>
+                  <span class="author">
+                    <img src="" alt="" style="max-width: 50px; border-radius: 50%;">
+                    <h6>Francesco Maccotta<br><a href="#">f0057836@gmail.com</a></h6>
+                  </span>
+                  <div class="line-dec"></div>
+                  <span class="bid">
+                        <br><strong>SPECIFICHE</strong><br>
+                  </span>
+                  <span class="ends">
+                    <br><strong>1°:&emsp;0</strong><br><strong>2°:&emsp;0</strong><br><strong>3°:&emsp;0</strong>
+                  </span>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+
+
+
+
+  <!-- Scripts -->
+  <!-- Bootstrap core JavaScript -->
+  <script src="vendor/jquery/jquery.min.js"></script>
+  <script src="vendor/bootstrap/js/bootstrap.min.js"></script>
+
+  <script src="assets/js/isotope.min.js"></script>
+  <script src="assets/js/owl-carousel.js"></script>
+
+  <script src="assets/js/tabs.js"></script>
+  <script src="assets/js/popup.js"></script>
+  <script src="assets/js/custom.js"></script>
+
+  </body>
 </html>
