--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
       <div class="row">
         <div class="col-lg-6 align-self-center">
           <div class="header-text">
-            <h2>Sogna, Regna &amp; Fatte un panino.</h2>
+            <h2>Sogna, Fregna &amp; Fatte un panino.</h2>
             <p>La pistacchiosa è la migliore di tutte. Chiedi ai famosi stremer di Twitch Marco Merrino e Sdrumox cosa pensano a riguardo </p>
             <div class="buttons">
               <div class="border-button">
@@ -119,7 +119,7 @@
               <li data-filter=".msc">2023/2024</li>
               <li data-filter=".dig">2024/2025</li>
               <li data-filter=".blc">2025/2026</li>
-              <li data-filter=".vtr">2026/2027</li>
+             <!-- <li data-filter=".vtr">2026/2027</li>-->
             </ul>
           </div>
         </div>
