--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
             <p>La pistacchiosa è la migliore di tutte. Chiedi ai famosi stremer di Twitch Marco Merrino e Sdrumox cosa pensano a riguardo </p>
             <div class="buttons">
               <div class="border-button">
-                <a href="Regolamento.html">Regolamento</a>
+                <a href="Regolamento.html">AAAAAA</a>
               </div>
             
             </div>
