--- a/index.html
+++ b/index.html
@@ -75,11 +75,14 @@
       <div class="row">
         <div class="col-lg-6 align-self-center">
           <div class="header-text">
-            <h2>Sogna, Fregna &amp; Fatte un panino.</h2>
-            <p>La pistacchiosa è la migliore di tutte. Chiedi ai famosi stremer di Twitch Marco Merrino e Sdrumox cosa pensano a riguardo </p>
+            <h2><em>Leghe</em>    
+              <br> 
+              FOTO IMPORTANTI </p>
+            </h2>
+            <p> Lo storico privato che racconta la nostra storia, anno dopo anno, partita dopo partita, per rivivere ogni edizione.</p>
             <div class="buttons">
               <div class="border-button">
-                <a href="Regolamento.html">AAAAAA</a>
+                <a href="Regolamento.html">Regolamento</a>
               </div>
             
             </div>
@@ -88,7 +91,7 @@
         <div class="col-lg-5 offset-lg-1">
           <div class="owl-banner owl-carousel">
             <div class="item">
-              <img src="assets/images/RiccardoBanner1__.jpg" alt="">
+              <img src="assets/images/home 1.jpg" alt="">
             </div>
             <div class="item">
               <img src="assets/images/RiccardoBanner2_.jpg" alt="">
