--- a/Regolamento.html
+++ b/Regolamento.html
@@ -48,7 +48,7 @@
                 <nav class="main-nav">
                     <!-- ***** Logo Start ***** -->
                     <a href="index.html" class="logo">
-                        <img src="assets/images/PISTACCHIO__.png" alt="">
+                        <img src="assets/images/banner.jpeg" alt="">
                     </a>
                     <!-- ***** Logo End ***** -->
                     <!-- ***** Menu Start ***** -->
